[gd_scene load_steps=2 format=3 uid="uid://yeqx08b8q0f0"]

[ext_resource type="Script" uid="uid://u54ne1pf51wg" path="res://Scenes/Enemies/throwable_base.gd" id="1_tk85p"]

[node name="ThrowableBase" type="Area2D"]
collision_mask = 2
script = ExtResource("1_tk85p")
speed = 1400

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(3, 3)

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="destructionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="destructionTimer" to="." method="_on_destruction_timer_timeout"]
